deployments/product_deployments.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: shop-product-mongodb
  labels:
    name: shop-product-mongodb
    system: shop-demo-microservice
    app: product-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: shop-product-mongodb
    spec:
      containers:
      - name: shop-product-mongodb
        image: mongo
        ports:
        - containerPort: 27017
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: shop-product
  labels:
    name: shop-product
    system: shop-demo-microservice
    app: product-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: shop-product
    spec:
      containers:
      - name: shop-product
        image: kyllynk/product:0.5
        ports:
        - containerPort: 80
