deployments/microservice_deployments.yaml
#Product deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: product-app
  labels:
    name: product-app
    system: demo-micro
    app: product
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: product-app
    spec:
      containers:
      - name: product-app
        image: kyllynk/product:1.0
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: product-svc
  labels:
    name: product-svc
    system: demo-micro
    app: product
spec:
  selector:
    name: product-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---

#Order deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: order-app
  labels:
    name: order-app
    system: demo-micro
    app: order
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: order-app
    spec:
      containers:
      - name: order-app
        image: kyllynk/order:1.0
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: order-svc
  labels:
    name: order-svc
    system: demo-micro
    app: order
spec:
  selector:
    name: order-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---

#Payment deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: payment-app
  labels:
    name: payment-app
    system: demo-micro
    app: payment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: payment-app
    spec:
      containers:
      - name: payment-app
        image: kyllynk/payment:1.0
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: payment-svc
  labels:
    name: payment-svc
    system: demo-micro
    app: payment
spec:
  selector:
    name: payment-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---

#Report deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: report-app
  labels:
    name: report-app
    system: demo-micro
    app: report
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: report-app
    spec:
      containers:
      - name: report-app
        image: kyllynk/report:1.0
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: report-svc
  labels:
    name: report-svc
    system: demo-micro
    app: report
spec:
  selector:
    name: report-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---

#Notification deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: notification-app
  labels:
    name: notification-app
    system: demo-micro
    app: notification
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: notification-app
    spec:
      containers:
      - name: notification-app
        image: kyllynk/notification:1.0
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: notification-svc
  labels:
    name: notification-svc
    system: demo-micro
    app: notification
spec:
  selector:
    name: notification-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---

#Public API deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: public-api-app
  labels:
    name: public-api-app
    system: demo-micro
    app: public-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: public-api-app
    spec:
      containers:
      - name: public-api-app
        image: kyllynk/public-api:1.0
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: public-api-svc
  labels:
    name: public-api-svc
    system: demo-micro
    app: public-api
spec:
  selector:
    name: public-api-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---

#Frontend deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend-app
  labels:
    name: frontend-app
    system: demo-micro
    app: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: frontend-app
    spec:
      containers:
      - name: frontend-app
        image: kyllynk/frontend:1.0
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: frontend-svc
  labels:
    name: frontend-svc
    system: demo-micro
    app: frontend
spec:
  selector:
    name: frontend-app
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
