deployments/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: product-api-ingress
spec:
  backend:
    serviceName: product-api-service
    servicePort: 80
